# carrinhos-pt2

./: .gitignore  README.md
aula-1/: README.md  paramotor.cpp  pwmroda4.cpp  raspvid.cpp
aula-2/: .gitignore  Makefile  README.md
aula-2/src/include/: client.hpp  device.hpp  server.hpp
aula-2/src/source/: client6b.cpp  client6c.cpp  client8.cpp  device.cpp  server6b.cpp  server6c.cpp  server8.cpp
aula-3/: .gitignore  CMakeLists.txt  Makefile  README.md  desenha.cpp  highgui.cpp
aula-3/src/include/: carrinho.hpp  device.hpp
aula-3/src/source/: camclient2.cpp  carrinho.cpp  client.cpp  client1.cpp  client2.cpp  device.cpp  server2.cpp
aula-4/: Makefile  README.md  cekraspcam2.cpp  fase3.cpp  fase3_m.cpp  paramotor.cpp
aula-4/src/include/: carrinho.hpp  client.hpp
aula-4/src/objs/: CMakeCache.txt
aula-4/src/source/: camclient1.cpp  camserver1.cpp  camserver2.cpp  carrinho.cpp  client.cpp  client2.cpp  client4.cpp  fase3.cpp  fase3_gen.cpp  fase3_m.cpp  server.cpp  server1.cpp  server2.cpp  server4.cpp
aula-5/: .gitignore  README.md  fase5.cpp
aula-6/: .gitignore  Makefile  README.md
aula-6/src/include/: carrinho.hpp  gui.hpp
aula-6/src/source/: carrinho.cpp  client4.cpp  client6.cpp  device.cpp  gui.cpp  server6.cpp
